Bug/post side left mobile (#48)
* Mobile post side left too close to action buttons

* Update versions

--- a/styles/forums.less
+++ b/styles/forums.less
@@ -2495,4 +2495,10 @@ h1.forumSearch{
 			width: 100%;
 		}
 	}
+
+	.postLeft{
+		.posterDetails{
+			margin-top: 12px;
+		}
+	}
 }
